--- a/VidhayakApp.Web/Views/Form/Form.cshtml
+++ b/VidhayakApp.Web/Views/Form/Form.cshtml
@@ -40,7 +40,7 @@
                                         <option selected="" value="">Select...</option>
                                         <option value="@ItemType.Demand">Demand</option>
                                         <option value="@ItemType.Complaint">Complaint</option>
-                                        <option value="@ItemType.Suggession">Suggession</option>
+                                        <option value="@ItemType.Suggestion">Suggession</option>
                                     </select>
                                 </div>
                                
