--- a/VidhayakApp.Web/Views/User/Dashboard.cshtml
+++ b/VidhayakApp.Web/Views/User/Dashboard.cshtml
@@ -64,9 +64,9 @@
                                 {
                                     <label class="">Complaint</label>
                                 }
-                                else if (item.Type == ItemType.Suggession)
+                                else if (item.Type == ItemType.Suggestion)
                                 {
-                                    <label class="Suggession">Suggession</label>
+                                    <label class="Suggestion">Suggestion</label>
                                 }
                             </td>
                             <td>
