--- a/VidhayakApp.Web/Views/Profile/ViewProfile.cshtml
+++ b/VidhayakApp.Web/Views/Profile/ViewProfile.cshtml
@@ -43,7 +43,9 @@
             <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"><span class="font-weight-bold"></span><span class="text-black-50"></span><span> </span></div>
             <div>
                 <!-- Button to trigger the modal -->
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#changePasswordModal">Change Password</button>
+                <center>
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#changePasswordModal">Change Password</button>
+                </center>
             </div>
         </div>
         <div class="col-md-5 border-right">
@@ -232,15 +234,6 @@
         </div>
     </div>
 </div>
-
-
-
-
-
-
-
-
-
 
 
 <!-- Modal -->
