28-03-2024 16:04pm major changes now Appuser is able to see schemeName and department name too in the table and new fields added in item table through migration

--- a/VidhayakApp.Web/Views/Form/Form.cshtml
+++ b/VidhayakApp.Web/Views/Form/Form.cshtml
@@ -71,7 +71,7 @@
 
                                         <div class="form-group">
                                             <label>Select Department</label>
-                                            <select asp-for="DepartmentId" id="departmentInput" class="form-control" disabled>
+                                            <select asp-for="DepartmentId"  name="DepartmentId" id="departmentInput" class="form-control" disabled>
                                                 <!-- Options here -->
                                                 <option selected="">Select...</option>
                                                 <option value="1">Collectorate</option>
@@ -130,7 +130,7 @@
 
                                         <div class="form-group">
                                             <label>Select Schemes</label>
-                                            <select asp-for="SchemeId" asp-route-id="3" id="SchemeInput" class="form-control" disabled>
+                                            <select asp-for="SchemeId" name="SchemeId" asp-route-id="3" id="SchemeInput" class="form-control" disabled>
                                                 <!-- Options here -->
                                          
                                                 <option selected="">Select...</option>
