--- a/VidhayakApp.Web/Views/AppUser/Complaint.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Complaint.cshtml
@@ -56,6 +56,7 @@
                         <th>Address <span class="icon-arrow">&UpArrow;</span></th>
                         <th>Type <span class="icon-arrow">&UpArrow;</span></th>
                         <th>Sub Category <span class="icon-arrow">&UpArrow;</span></th>
+                        <th>Department Name <span class="icon-arrow">&UpArrow;</span></th>
                         <th>Title <span class="icon-arrow">&UpArrow;</span></th>
                         <th>Description <span class="icon-arrow">&UpArrow;</span></th>
                         <th>Created On <span class="icon-arrow">&UpArrow;</span></th>
@@ -76,6 +77,7 @@
                             <td>@(userDetail.Address ?? "")</td>
                             <td>@(userDetail.Type )</td>
                             <td>@(userDetail.SubCategory)</td>
+                            <td>@(userDetail.DepartmentName ?? "")</td>
                             <td>@(userDetail.Title ?? "")</td>
                             <td>@(userDetail.Description ?? "")</td>
                             <td>@(userDetail.CreatedAt)</td>
