--- a/VidhayakApp.Web/Views/AppUser/Demand.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Demand.cshtml
@@ -58,6 +58,7 @@
                         <th>Address <span class="icon-arrow">&UpArrow;</span></th>
                         <th>Type <span class="icon-arrow">&UpArrow;</span></th>
                         <th>Sub Category <span class="icon-arrow">&UpArrow;</span></th>
+                        <th>Scheme Name <span class="icon-arrow">&UpArrow;</span></th>
                         <th>Title <span class="icon-arrow">&UpArrow;</span></th>
                         <th>Description <span class="icon-arrow">&UpArrow;</span></th>
                         <th>Created On <span class="icon-arrow">&UpArrow;</span></th>
@@ -78,6 +79,7 @@
                             <td>@(userDetail.Address ?? "")</td>
                             <td>@(userDetail.Type )</td>
                             <td>@(userDetail.SubCategory)</td>
+                            <td>@(userDetail.SchemeName ?? "")</td>
                             <td>@(userDetail.Title ?? "")</td>
                             <td>@(userDetail.Description ?? "")</td>
                             <td>@(userDetail.CreatedAt)</td>
