--- a/VidhayakApp.Web/Views/AppUser/Demand.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Demand.cshtml
@@ -28,6 +28,7 @@
     <link rel="stylesheet" type="text/css" href="~/css/UserDashboardTable.css">
 </head>
 
+        <link rel="stylesheet" href="~/css/site.css" />
 <body class="body_img_user_table">
     <main class="table" id="customers_table">
         <section class="table__header">
