--- a/VidhayakApp.Web/Views/AppUser/UpdateOnUserIssuesOnAppUserDashboard.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/UpdateOnUserIssuesOnAppUserDashboard.cshtml
@@ -12,6 +12,7 @@
     int? userId = context.Session.GetInt32("UserId");
    
 }
+<link rel="stylesheet" href="~/css/site.css" />
 
     <form method="post" asp-action="UpdateOnUserIssuesOnAppUserDashboard">
         <div class="form-group">
