--- a/VidhayakApp.Web/Views/AppUser/Create.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Create.cshtml
@@ -17,7 +17,7 @@
 
     @TempData["Message"]
 
-
+    <link rel="stylesheet" href="~/css/site.css" />
 <section class="content">
     <div class="container-fluid">
         <div class="row justify-content-center">
@@ -38,13 +38,9 @@
                     <label asp-for="UserName" class="form-label">UserName</label>
                     <input asp-for="UserName" class="form-control" id="UserName" placeholder="Enter UserName...">
                 </div>
-                 <div class="input-group mb-3">
-                      <input asp-for=" Dob" asp-controller="Account" class="form-control" id=" Dob" aria-describedby="DobHelp" placeholder="Enter Date of Birth">
-                      <div class="input-group-append">
-                          <div class="input-group-text">
-                              <span class="fas fa-lock"></span>
-                          </div>
-                      </div>
+                 <div class="col-md-6">
+                   <label asp-for="Dob" class="form-label">Date Of Birth</label>
+                   <input asp-for=" Dob" type="date" class="form-control" id=" Dob" aria-describedby="DobHelp" placeholder="Enter Date of Birth">   
                 </div> 
                 <div class="col-12">
                     <label asp-for="Address" class="form-label">Address</label>
