--- a/VidhayakApp.Web/Views/AppUser/Edit.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Edit.cshtml
@@ -18,7 +18,7 @@
 }else{
     @TempData["Message"]
 
-    
+    <link rel="stylesheet" href="~/css/site.css" />
 <section class="content">
     <div class="container-fluid">
         <div class="row justify-content-center">
