--- a/VidhayakApp.Web/Views/AppUser/Dashboard.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Dashboard.cshtml
@@ -45,7 +45,7 @@
 <body>
         <link rel="stylesheet" href="~/css/site.css" />
 <section>
-    <div class="container-fluid col-12">
+     <div class="container-fluid col-12 " style="margin-top: 8rem">
 
             
         <div class="row">
@@ -197,7 +197,7 @@
 <!-- AdminLTE App -->
 <script src="~/dist/js/adminlte.js"></script>
 <!-- AdminLTE for demo purposes -->
-<script src="~/dist/js/demo.js"></script>
+@* <script src="~/dist/js/demo.js"></script> *@
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <script src="~/dist/js/pages/dashboard.js"></script>
 <script src="~/js/department.js"></script>
