--- a/VidhayakApp.Web/Views/AppUser/ListUsers.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/ListUsers.cshtml
@@ -29,6 +29,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Convert | Export html Table to CSV & EXCEL File</title>
     <link rel="stylesheet" type="text/css" href="~/css/UserDashboardTable.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 </head>
 
     <link rel="stylesheet" href="~/css/site.css" />
